# shahcoin

./: .cirrus.yml  .gitignore  ADDITIONAL_UX_ENHANCEMENTS_SUMMARY.md  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  AI_FEE_ESTIMATOR_IMPLEMENTATION_SUMMARY.md  AI_TROUBLESHOOTER_IMPLEMENTATION.md  ASSET_CREATOR_PANEL_IMPLEMENTATION_SUMMARY.md  AUTO_STAKING_OPTIMIZER_IMPLEMENTATION_SUMMARY.md  BUNDLE_MONETIZATION_IMPLEMENTATION_SUMMARY.md  COLD_STAKING_PANEL_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  COPYING  CUSTOM_FEE_SELECTION_IMPLEMENTATION.md  DAPP_SDK_ENHANCEMENT_PLAN.md  DAPP_SDK_FINAL_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_STATUS.md  DIAGNOSTICS_PANEL_SUMMARY.md  Dockerfile  ENHANCED_ADDRESS_BOOK_IMPLEMENTATION.md  FEE_EXPLANATION_IMPLEMENTATION_SUMMARY.md  FINAL_CURSOR_PROMPTS_IMPLEMENTATION_SUMMARY.md  FINAL_GITHUB_REPO_STATUS.md  FINAL_LICENSE_AUDIT_SUMMARY.md  FINAL_VERIFICATION_SUMMARY.md  GITHUB_REPO_FINALIZATION_SUMMARY.md  HYBRID_CONSENSUS_ADVANCED_IMPLEMENTATION_SUMMARY.md  HYBRID_CONSENSUS_IMPLEMENTATION_SUMMARY.md  HYBRID_CONSENSUS_NEXT_STEPS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_AND_BUILD_INSTRUCTIONS.md  LEGAL_DISCLAIMER_IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  LOCAL_AI_ASSISTANT_IMPLEMENTATION.md  MARKETPLACE_INTEGRATION_SUMMARY.md  METADATA_AND_BADGE_IMPLEMENTATION_SUMMARY.md  MINING_GUIDE.md  MODERATION_PANEL_IMPLEMENTATION_SUMMARY.md  MULTI_RECIPIENT_SEND_IMPLEMENTATION.md  Makefile.am  (+101 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: ci.yml
.tx/: config
api/dev-api/: package.json
api/email/: payment-confirmation.js
build-aux/m4/: shahcoin_find_bdb48.m4  shahcoin_qt.m4  shahcoin_subdir_to_include.m4
build_msvc/: .gitignore  README.md  bitcoin_config.h.in  msvc-autogen.py  shahcoin.sln  shahcoin_config.h.in  vcpkg.json
build_msvc/bench_shahcoin/: bench_shahcoin.vcxproj.in
build_msvc/bitcoin-cli/: bitcoin-cli.vcxproj
build_msvc/bitcoind/: bitcoind.vcxproj
build_msvc/libbitcoin_qt/: libbitcoin_qt.vcxproj
build_msvc/libshahcoin_consensus/: libshahcoin_consensus.vcxproj
build_msvc/shahcoin-qt/: shahcoin-qt.vcxproj
build_msvc/shahcoin-tx/: shahcoin-tx.vcxproj
build_msvc/shahcoin-util/: shahcoin-util.vcxproj
build_msvc/shahcoin-wallet/: shahcoin-wallet.vcxproj
build_msvc/test_shahcoin/: test_shahcoin.vcxproj
build_msvc/test_shahcoin-qt/: test_shahcoin-qt.vcxproj
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
ci/lint/: 04_install.sh  06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env.sh  00_setup_env_android.sh  00_setup_env_arm.sh  00_setup_env_i686_centos.sh  00_setup_env_i686_multiprocess.sh  00_setup_env_mac.sh  00_setup_env_mac_native.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet_libbitcoinkernel.sh  00_setup_env_native_nowallet_libshahcoinkernel.sh  00_setup_env_native_qt5.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  01_base_install.sh  02_run_container.sh  06_script_b.sh  wrap-valgrind.sh  wrap-wine.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
contrib/debian/: copyright
contrib/devtools/: README.md  circular-dependencies.py  clang-format-diff.py  copyright_header.py  gen-bitcoin-conf.sh  gen-manpages.py  gen-shahcoin-conf.sh  headerssync-params.py  security-check.py  symbol-check.py  test-security-check.py  test-symbol-check.py  test_deterministic_coverage.sh  test_utxo_snapshots.sh  utils.py  utxo_snapshot.sh
contrib/devtools/bitcoin-tidy/: CMakeLists.txt  README  example_logprintf.cpp
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-clean  guix-codesign  guix-verify  manifest.scm
contrib/init/: README.md  bitcoind.conf  bitcoind.openrc  bitcoind.service  shahcoind.conf  shahcoind.init  shahcoind.openrcconf  (+1 more)
data/: faqs.json
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  ai_fee_estimator.md  auto_staking_optimizer.md  benchmarking.md  bips.md  bitcoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  developer-staking.md  dnsseed-policy.md  economics.md  external-signer.md  feature-map.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multisig-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  (+13 more)
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoind.1  shahcoin-cli.1  shahcoin-qt.1  shahcoin-tx.1  shahcoin-util.1  shahcoin-wallet.1  shahcoind.1
scripts/: README.md  setup-shahcoin.sh
sdk/: package.json  turbo.json
sdk-core/: shahcoin.js
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  base58type.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  (+153 more)
telegram/: LegalDisclaimerTelegramMiniApp.js  PremiumTelegramMiniApp.js  SHAHSecurityTelegramMiniApp.js  SmartUnitDisplayTelegramMiniApp.js  VerifiedBadgeTelegramMiniApp.js
test/: README.md  config.ini.in  get_previous_releases.py
(+2013 files in other folders)
