dist_man1_MANS=

if BUILD_SHAHCOIND
  dist_man1_MANS+=shahcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=shahcoin-qt.1
endif

if BUILD_SHAHCOIN_CLI
  dist_man1_MANS+=shahcoin-cli.1
endif

if BUILD_SHAHCOIN_TX
  dist_man1_MANS+=shahcoin-tx.1
endif

if BUILD_SHAHCOIN_UTIL
  dist_man1_MANS+=shahcoin-util.1
endif

if ENABLE_WALLET
if BUILD_SHAHCOIN_WALLET
  dist_man1_MANS+=shahcoin-wallet.1
endif
endif
